<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">AndroidIntentsAndFilters</string>
    <string name="action_settings">Settings</string>
    <string name="StartBrowser">Start Browser</string>
    <string name="StartPhone">Start Phone</string>
    <string name="StartIntentFilter">Start Intent Filter</string>
    <string name="StartBrowserViewAction">Start Browser with VIEW action</string>
    <string name="StartBrowserLaunchAction">Start Browser with LAUNCH action</string>
    <string name="ExceptionCondition">Exception Condition</string>

</resources>
