<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <Button
    android:id="@+id/button_startBrowser_IntentFilter_ViewAction"
    android:layout_width="fill_parent"
    android:layout_height="wrap_content"
    android:text="@string/StartBrowserViewAction"/>

    <Button
        android:id="@+id/button_startBrowser_IntentFilter_LaunchAction"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/StartBrowserLaunchAction"/>

    <Button
        android:id="@+id/button_startBrowser_IntentFilter_Exception"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:text="@string/ExceptionCondition"/>

</LinearLayout>